# PynamicMesh

./: PynamicMesh.py  README.md  pyproject.toml  requirements.txt
PynamicMesh/core/: custom_fm.py  graph_sim.py  physic_model.py  pipelines.py  reeb_graph.py
PynamicMesh/utils/: batch.py  tools.py
core/: pipelines.py
examples/: config.yaml  config_batch.yaml  execution_examples.py  landmarks.npy
